--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1 {
-    color: red;
+    color: green;
     text-align: center;
   }
   
@@ -7,7 +7,7 @@ h1 {
     font-style: italic;
     text-align: center;
   }
-  
+  P { text-align: center }
   p {
     font-family: sans-serif;
   }
@@ -15,4 +15,12 @@ h1 {
   ul {
     font-size: 20px;
     line-height: 30px;
+  }
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 50%;
   }
